<resources>
    <string name="app_name">tiendas</string>
    <string name="msg_user">Digite su usuario</string>
    <string name="msg_clave">Digite su clave</string>
    <string name="olvide_clave">Olvide mi contraseña</string>
    <string name="recuerda_clave">Recuerda mi contraseña</string>
    <string name="msg_registrar">Crea una cuenta</string>
    <string name="btn_iniciar">Iniciar Sesion</string>
    <string name="btn_registrar">registrar</string>
    <string name="tiendas">tiendas</string>
    <string name="favoritas">favoritas</string>
    <string name="miPerfil">Mi Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagen">imagén</string>
    <string name="nombre">Nombre de Tienda</string>
    <string name="descripcion">descripción</string>
    <string name="telefono">Llamar</string>
    <string name="direccion">Dirección</string>
    <string name="Pedir">pedir</string>
    <string name="Ordenes">ordenes</string>
    <string name="Cuentas">cuentas</string>
    <string name="btn_crearP">Hacer Pedido</string>
    <string name="msg_comentario">comentario</string>
    <string name="btn_cancelarP">cancelar</string>
    <string name="btn_modificarP">cambiar</string>
    <string name="btn_anotarP">anotar</string>
    <string name="btn_confirmarP">confirmar</string>
    <string name="btn_historial">historial</string>
    <string name="btn_cinfirmarPa">confirmar pago</string>
</resources>