<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00526A"
    android:orientation="vertical"
    tools:context=".vistas.RegistroActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msg_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/msgUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msg_clave"
        app:endIconMode="password_toggle">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/msgClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registro"
        android:background="@drawable/bordes_redondos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#09e293"
        android:text="@string/btn_registrar" />


</LinearLayout>