<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="187dp"
        android:background="#EFF2F7"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/access"
            android:fontFamily="@font/cream"
            android:text="Producto Pedido"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/comentarioOrden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Comentarios Adjuntos"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/horaOrden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9:11 am"
                android:textSize="20dp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/esperaOrden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cream"
                android:text="Hace 20 min"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginRight="5dp"
                android:id="@+id/candelarPedido"
                android:fontFamily="@font/cream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes_redondos"
                android:backgroundTint="@color/fondo_oscuro"
                android:text="@string/btn_cancelarP" />

            <Button
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginRight="5dp"
                android:id="@+id/modificarPedido"
                android:fontFamily="@font/cream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes_redondos"
                android:backgroundTint="@color/access2"
                android:text="@string/btn_modificarP" />

            <Button
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginRight="5dp"
                android:id="@+id/anotarP"
                android:fontFamily="@font/cream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes_redondos"
                android:backgroundTint="@color/access3"
                android:text="@string/btn_anotarP" />

            <Button
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginRight="5dp"
                android:id="@+id/confirmarP"
                android:fontFamily="@font/cream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes_redondos"
                android:backgroundTint="@color/access3"
                android:text="@string/btn_confirmarP" />

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>